# yew-simple-template

./: .gitignore  Cargo.toml  README.md  webpack.config.js
src/: lib.rs
static/: index.html
